common-applications/infra-test-cluster/hk/openeuler-infra-ai-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openeuler-infra-ai-service
  name: openeuler-infra-ai-service
