common-applications/infra-test-cluster/hk/openeuler-infra-ai-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openeuler-infra-ai-service
  namespace: openeuler-infra-ai-service
spec:
  ports:
  - name: http-port
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: openeuler-infra-ai-service
  type: ClusterIP
